k8s/product-catalogue.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-catalogue
spec:
  selector:
    app: product-catalogue
  ports:
  - port: 5001
    targetPort: 5001
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-catalogue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-catalogue
  template:
    metadata:
      labels:
        app: product-catalogue
    spec:
      containers:
      - name: product-catalogue
        image: stoufaa/product-catalogue:V8
        imagePullPolicy: Always
        ports:
        - containerPort: 5001
        livenessProbe:
          httpGet:
            path: /api/health
            port: 5001
          initialDelaySeconds: 5
          periodSeconds: 10
