k8s/user-profile.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-profile
spec:
  selector:
    app: user-profile
  ports:
  - port: 5003
    targetPort: 5003
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-profile
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-profile
  template:
    metadata:
      labels:
        app: user-profile
    spec:
      containers:
      - name: user-profile
        image: stoufaa/user-profile:V8
        imagePullPolicy: Always
        ports:
        - containerPort: 5003
        livenessProbe:
          httpGet:
            path: /api/health
            port: 5003
          initialDelaySeconds: 5
          periodSeconds: 10
